***********************************
CHANGES IN VERSION 0.2.2

BUG FIXES

   o Fix undertermined cases in rseqc

***********************************
CHANGES IN VERSION 0.2.1

SIGNIFICANT USER-VISIBLE CHANGES

   o Change tolerance for strandness from 0.8 to 0.5

BUG FIXES

   o fix bug in count table

   o Fix bug when multiple gtf annotation are available

   o Fix bug when sample labels are numerical


***********************************
CHANGES IN VERSION 0.2.0

SIGNIFICANT USER-VISIBLE CHANGES

   o Add cluster options in config file

   o Add KDI export files

   o Change in output file names to ease the KDI export

***********************************
CHANGES IN VERSION 0.1.1

BUG FIXES

   o Fix bug in RSeQC infer_experiment interpretation for SE

   o Fix bug in report regarding sample names


***********************************
CHANGES IN VERSION 0.1.0

NEW FEATURES

   o Add saturation curves

   o Strandness is now automatically detected before mapping if STRANDED is not set

   o Generate Index of BAM files

SIGNIFICANT USER-VISIBLE CHANGES

   o Add new annotation model

   o Deal with non Human/Mouse references, and no gene_type information

   o Add --sjdbOverhang from STAR in the config file

   o FastQC step is now optional

   o Update logs reporting for clarity reasons

   o Change default config file for STAR option / R path

   o Back to zcat command for gzip file during STAR mapping

   o makeRNAreport now requires the SAMPLE_PLAN to deal with biological ids

   o Change annotation plot visualization and add the count table

   o Fix bugs in sample names in report

   o Remove links to HTML report

BUG FIXES

   o Fix bug for Zebrafish genome

   o Fix bug when n=1

   o Remove emply line from SAMPLE_PLAN

   o Fix bug in report regarding sample names

   o Fix bug in report.html in annotation table


***********************************
CHANGES IN VERSION 0.0.9

HOTFIX

   o  Fix bug in HTML report

***********************************